--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   </div>
   <div class="mainDiv">
     <div class="childDiv">
-    <img src="images/download.jpg" alt="Avatar" >
+      <div class="img">
+        <img src="images/download.jpg" alt="img" >
+      </div>
+
        <div class="container">
          <h4><b><a href="surya.html">Surya Narla</a></b></h4>
-        <p>Software Trainee at APSSDC</p>
+           <button type="button" name="button">  <p>Software Trainee at APSSDC</p></button>
       </div>
   </div>
   <div class="childDiv">
-      <img src="images/download.jpg" alt="Avatar" >
+    <div class="img">
+        <img src="images/download.jpg" alt="img" >
+    </div>
+
       <div class="container">
         <h4><b><a href="kalyan.html">Kalyan P</a></b></h4>
-        <p>Software Developer at APSSDC</p>
+           <button type="button" name="button">  <p>Software Trainee at APSSDC</p></button>
     </div>
   </div>
   </div>
 </br>
-    <!--<div class="button">
-      <button type="text" alt="Submit" width="48" height="48" >
-        <a href="registration.html">Registration link</a>
-      </button>
-      </div>-->
+
 
 </body>
 </html>
