--- a/surya.html
+++ b/surya.html
@@ -9,111 +9,117 @@
 
 <body>
 <div class="row">
-<div class="left">
-<div class="well">
-<center><img src="images/surya1.png" height="150px" width="150px" /></center>
-<div class="name">venkata suryanarayana</div>
-<div class="name1">Junior software trainee</div>
-<hr />
-<div class="sidemenu">
-<ul>
-<li> To secure a challenging position where I can effectively contribute my skills as Software Professional, possessing competent Technical Skills.</li>
-<li id="myphone"> </li>
-<li> venkatasuryanarayana.n@apssdc.in </li>
-<li> 8464032835 </li>
-<li> engineering.apssdc.in </li>
-<li> English </li>
-</ul>
-</div>
-</div>
-</div>
+   <div class="left">
+
+        <div class="bio">
+          <img src="images/surya1.png" >
+        <div class="name">Venkata suryanarayana</div>
+        <div class="name1">Software trainee</div>
+         </div>
+        <hr />
+
+          <div class="sidemenu">
+             <p>
+              To secure a challenging position where I can effectively contribute my skills as Software Professional,
+              possessing competent Technical Skills.
+             </p>
+             <h4> venkatasuryanarayana.n@apssdc.in </h4>
+             <div> 8464032835 </div>
+             <div> English </div>
+
+          </div>
+
+    </div>
 <div class="right">
-<div class="well">
-<p style="color:#930; font-weight:bold; font-size:16px;">BACKGROUND</p>
-<hr />
-<div class="headers"> CARRIER OBJECTIVE</div>
-<hr />
-<div class="about">
-To secure a challenging position where I can effectively contribute my skills as Software Professional, possessing competent Technical Skills.
-</div>
 
-<br /><br />
-<div class="headers">Work Experience</div>
-<hr />
-Worked as Trainer cum Developer and conducted workshops in various technologies like linux,html,javascript,css,Mit,Scratch and now junior software trainee
 
-   
-<div class="headers">SKILLS</div>
-<hr />
-Web Developement
-<br />
-<span class="label label-keyword">HTML</span>
-<span class="label label-keyword">JAVASCRIPT</span>
-<span class="label label-keyword">CSS</span>
-<hr />
-Programming Languages
-<br />
-<span class="label label-keyword">C</span>
-<span class="label label-keyword">JAVA</span>
-<span class="label label-keyword">PHP</span>
-<hr />
-Operating system
-<br />
-<span class="label label-keyword">WINDOWS XP,7,8,10</span>
+     <div class="headers">
+       BACKGROUND
+     </div>
+     <hr/>
+    S/O Sivaprasad,Door.No:3-23,Ramalayam street, pin code:523456,Guntur, Guntur(d.t),Andhra Pradesh(state),India.
+     <hr />
+   <div class="headers"> CARRIER OBJECTIVE</div>
+     <hr />
+    <div class="about">
+        To secure a challenging position where I can effectively contribute my skills as Software Professional, possessing competent Technical Skills.
+    </div>
 
-<br />
+     <br /><br />
+    <div class="headers">WORK EXPERINECE</div>
+    <hr />
+    Worked as Trainer cum Developer and conducted workshops in various technologies like
+     linux,html,javascript,css,Mit,Scratch and now junior software trainee.
 
-<br />
-<div class="headers">EDUCATION</div>
-<hr />
-<div class="education"><ul>
-    <li>Completed Btech in Sri Sai Aditya Institute Of Science & Technology, Surampalem afflicated to Jawaharlal Nehru Technological University, Kakinada with an aggregrate of 65.82 and my year of passing is 2015 </li>
 
-    <li>completed inter in Sri Chaitanya Junior College, Vijayawada Board Of Intermediate Education, AP with an aggregrate of 85.8 and year of passing is 2011 </li>
+     <div class="headers">SKILLS</div>
+     <hr />
+     Web Developement
+     <br />
+      <span class="label label-keyword">HTML</span>
+      <span class="label label-keyword">JAVASCRIPT</span>
+      <span class="label label-keyword">CSS</span>
+      <hr />
+       Programming Languages
+       <br />
+       <span class="label label-keyword">C</span>
+       <span class="label label-keyword">JAVA</span>
+       <span class="label label-keyword">PHP</span>
+       <hr />
+       Operating system
+       <br />
+       <span class="label label-keyword">WINDOWS XP,7,8,10</span>
 
-   <li> Completed 10th in Sunshine [em] high school,Rama Chandrapuram Board Of Secondary Education, AP with an aggregrate of 74.83 and year of passing is 2009 
-</li>
-   
-  
-   </ul></div>
-   <br />
-<br />
-<div class="headers">Certifications</div>
-<hr />
-<div class="awards"><ul>
-    <li> Achieved certificate of  Microsoft Technical Associate in Software Development Fundamentals(C#). </li>
+       <br />
 
-    <li> Achieved certificate of Microsoft Technical Associate in Microsoft .NET Fundamentals(C#).</li>
+       <br />
+       <div class="headers">EDUCATION</div>
+       <hr />
+       <div class="education">
+         <ul>
+           <li>Completed Btech in Sri Sai Aditya Institute Of Science & Technology, Surampalem afflicated to Jawaharlal Nehru Technological University, Kakinada with an aggregrate of 65.82 and my year of passing is 2015 </li>
 
-   <li> Achieved certificate of Microsoft Technical Associate in Web Development Fundamentals(C#).</li>
-   
-  
-   </ul></div>  <br />
-<br />
+           <li>Completed inter in Sri Chaitanya Junior College, Vijayawada Board Of Intermediate Education, AP with an aggregrate of 85.8 and year of passing is 2011 </li>
+
+           <li> Completed 10th in Sunshine [em] high school,Rama Chandrapuram Board Of Secondary Education, AP with an aggregrate of 74.83 and year of passing is 2009
+           </li>
+          </ul>
+        </div>
+        <br />
+        <br />
+       <div class="headers">CERTIFICATIONS</div>
+      <hr />
+    <div class="awards">
+      <ul>
+       <li> Achieved certificate of  Microsoft Technical Associate in Software Development Fundamentals(C#). </li>
+
+       <li> Achieved certificate of Microsoft Technical Associate in Microsoft .NET Fundamentals(C#).</li>
+
+       <li> Achieved certificate of Microsoft Technical Associate in Web Development Fundamentals(C#).</li>
+      </ul>
+    </div>
+     <br />
+     <br />
 <div class="headers">INTERESTS</div>
 <hr />
 <div class="Interests"><ul>
     <li>Playing cricket</li>
-
     <li>Watching tv</li>
-
    <li> Reading books</li>
-   
-  
-   </ul></div>
+</ul>
+ </div>
     <br />
 <br />
-<div class="headers">Declaration</div>
+<div class="headers">DECLARATION</div>
 <hr />
-<div class="References"><ul>
+<div class="References">
+  <ul>
     <li>I hereby certify that all the above information is correct to the best of my knowledge and belief.</li>
-   
-  
-   </ul></div>
+  </ul>
+</div>
+</div>
 
 </div>
-</div>
-</div>
-<script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
