--- a/kalyan.html
+++ b/kalyan.html
@@ -8,26 +8,30 @@
 <body>
 <div class="row">
 <div class="left">
-<div class="well">
-<center><img src="images/surya1.png" height="150px" width="150px" /></center>
+
+  <div class="bio">
+<img src="images/surya1.png"  />
 <div class="name" id="myname"></div>
 <div class="name1" id="designation1"></div>
+</div>
 <hr />
 <div class="sidemenu" >
-<ul>
-<li id="obj"> </li>
-<li id="myphone"> </li>
-<li id="email">  </li>
-<li id="site">  </li>
-<li> English </li>
-</ul>
+
+<div id="obj"> </div>
+<div id="myphone"> </div>
+<div id="email">  </div>
+<div id="site">  </div>
+<div> English </div>
+
 </div>
-</div>
+
 </div>
 <div class="right">
-<div class="well">
-<p style="color:#930; font-weight:bold; font-size:16px;">BACKGROUND</p>
+
+ <h3><b>Back Ground</b></h3>
 <hr />
+<div id="b">
+</div>
 <h3><b>Carrier Objective</b></h3><hr/>
 <div class="headers" id="carrier"> </div>
 
@@ -37,7 +41,7 @@
 <h3><b>Experience</b></h3>
 <hr />
 <div id="experience"></div>
-  
+
 <h3><b>Skills</b></h3>
  <hr />
  <div  class="label label-keyword" id="os"></div>
@@ -57,7 +61,7 @@
       <li id="ssc"> </li>
    </ul>
 </div>
-   
+
 <div class="headers"><h3><b>Certifications</b></h3></div>
 <hr />
 <div class="awards">
@@ -68,7 +72,7 @@
 
    <li id="ac3"></li>
   </ul>
-</div> 
+</div>
 <div class="headers"><h3><b>Interests</b></h3></div>
 <hr />
 <div class="Interests">
@@ -87,7 +91,7 @@
     <p id="d"></p>
 </div>
 </div>
-</div>
+
 </div>
 <script type="text/javascript" src="main.js"></script>
 </body>
