--- a/surya.html
+++ b/surya.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Resume</title>
 <link rel="stylesheet" type="text/css" href="resumeex.css">
 
@@ -23,7 +24,7 @@
               To secure a challenging position where I can effectively contribute my skills as Software Professional,
               possessing competent Technical Skills.
              </p>
-             <h4> venkatasuryanarayana.n@apssdc.in </h4>
+             <div> venkatasurya narayana.n @apssdc.in </div>
              <div> 8464032835 </div>
              <div> English </div>
 
