--- a/surya.html
+++ b/surya.html
@@ -26,7 +26,7 @@
              </p>
              <div> venkatasurya narayana.n @apssdc.in </div>
              <div> 8464032835 </div>
-             <div> English </div>
+             <div> English,Telugu,Hindi </div>
 
           </div>
 
