--- a/surya.html
+++ b/surya.html
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Resume</title>
-<link rel="stylesheet" type="text/css" href="resumeex.css">
+<link rel="stylesheet" type="text/css" href="resume.css">
 
 </head>
 
 <body>
-<div class="row">
+<div class="main">
    <div class="left">
 
         <div class="bio">
@@ -17,7 +17,7 @@
         <div class="name">Venkata suryanarayana</div>
         <div class="name1">Software trainee</div>
          </div>
-        <hr />
+
 
           <div class="sidemenu">
              <p>
@@ -26,7 +26,7 @@
              </p>
              <div> venkatasurya narayana.n @apssdc.in </div>
              <div> 8464032835 </div>
-             <div> English,Telugu,Hindi </div>
+             <div> English,Telugu </div>
 
           </div>
 
