--- a/kalyan.html
+++ b/kalyan.html
@@ -3,11 +3,11 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Resume</title>
-<link rel="stylesheet" type="text/css" href="resumeex.css">
+<link rel="stylesheet" type="text/css" href="resume.css">
 </head>
 <body>
 
-  <div id="row">
+  <div id="main">
   </div>
   <script type="text/javascript" src="main.js"></script>
 
