--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 
        <div class="container">
-         <h4><b><a href="surya.html">Surya Narla</a></b></h4>
+         <h4><b><a href="static.html">Surya Narla</a></b></h4>
            <button type="button" name="button">  <p>Software Trainee at APSSDC</p></button>
       </div>
   </div>
@@ -25,7 +25,7 @@
     </div>
 
       <div class="container">
-        <h4><b><a href="kalyan.html">Kalyan P</a></b></h4>
+        <h4><b><a href="dynamic.html">Kalyan P</a></b></h4>
            <button type="button" name="button">  <p>Software Trainee at APSSDC</p></button>
     </div>
   </div>
