--- a/dynamic.html
+++ b/dynamic.html
@@ -2,7 +2,7 @@
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Resume</title>
+<title>Resume New</title>
 <link rel="stylesheet" type="text/css" href="resume.css">
 </head>
 <body>
